Fixed button misalignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
     outline: 0;
     background-color:  rgb(255, 89, 69);
     width: 100px;
-    height: 41px;
+    height: 42px;
     border-radius: 20px;
 
     cursor: pointer;
